test/compilation_errors/eof.clj
(ns compilation_errors.eof)

;(defn eof-function[] (+ 2 3)
